@@ -6,6 +6,7 @@ version 0.8 - xxx
  . BitmapFontAtlas: new features (issue #317)
  . CocosLive: Demo shows world rankings (issue #342)
  . CocosNode: actions don't retain the target (issue #150)
+ . CocosNode: support real openGL Z vertex (issue #355)
  . Demos: Added PerformanceParticleTest (issue #331)
  . Director: Fast Director runs in it's own thread (issue #145)
  . Director: Fast Director works with attach/detach (issue #145)
